Creating container_circle

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,11 @@
 
 
         <View
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></View>
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/container_circle"
+            app:layout_constraintBaseline_toTopOf="parent"
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
