--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:background="@color/purple">
 
 
@@ -17,7 +17,7 @@
             android:id="@+id/container_circle"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:layout_marginStart="20dp"
             android:background="@drawable/container_circle"
             app:layout_constraintTop_toTopOf="parent"
@@ -43,10 +43,45 @@
             android:textStyle="bold"
             android:layout_marginTop="30dp"
             android:layout_marginStart="20dp"
+            android:layout_marginBottom="30dp"
             app:layout_constraintTop_toBottomOf="@id/container_circle"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
 
+        <ImageView
+            android:id="@+id/icEye"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_eye"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="40dp"
+            app:layout_constraintStart_toEndOf="@id/container_circle"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <ImageView
+            android:id="@+id/icQuestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_question"
+            android:layout_marginTop="40dp"
+            app:layout_constraintStart_toEndOf="@id/icEye"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/icPersonAdd"
+            />
+
+        <ImageView
+            android:id="@+id/icPersonAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_person_add"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintStart_toEndOf="@+id/icQuestion"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
