--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,12 @@
         android:background="@color/purple">
 
         <View
-            android:id="@+id/container_circle"
+            android:id="@+id/content_circle"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="30dp"
             android:layout_marginStart="20dp"
-            android:background="@drawable/container_circle"
+            android:background="@drawable/content_circle"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             />
@@ -27,10 +27,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_user"
-            app:layout_constraintTop_toTopOf="@id/container_circle"
-            app:layout_constraintStart_toStartOf="@id/container_circle"
-            app:layout_constraintEnd_toEndOf="@id/container_circle"
-            app:layout_constraintBottom_toBottomOf="@id/container_circle"
+            app:layout_constraintTop_toTopOf="@id/content_circle"
+            app:layout_constraintStart_toStartOf="@id/content_circle"
+            app:layout_constraintEnd_toEndOf="@id/content_circle"
+            app:layout_constraintBottom_toBottomOf="@id/content_circle"
             android:contentDescription="@string/img_person" />
 
         <TextView
@@ -43,7 +43,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="30dp"
-            app:layout_constraintTop_toBottomOf="@id/container_circle"
+            app:layout_constraintTop_toBottomOf="@id/content_circle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             />
@@ -55,7 +55,7 @@
             android:src="@drawable/ic_eye"
             android:layout_marginStart="150dp"
             android:layout_marginTop="40dp"
-            app:layout_constraintStart_toEndOf="@id/container_circle"
+            app:layout_constraintStart_toEndOf="@id/content_circle"
             app:layout_constraintTop_toTopOf="parent"
             android:contentDescription="@string/img_eye" />
 
@@ -82,6 +82,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:contentDescription="@string/img_person_add" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/txt_balance_account"
+        android:textSize="22sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_margin="20dp"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_icon_payments"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 
 
 </LinearLayout>
