Implementing RecyclerView for Informative cardview

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -136,6 +136,7 @@
     
     
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_products"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
