--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/light_gray"
     app:cardElevation="10dp"
-    android:layout_marginTop="20dp"
     android:layout_marginStart="20dp"
-    android:layout_marginEnd="10dp"
+    android:layout_marginEnd="20dp"
     android:layout_marginBottom="20dp">
 
 
