--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#EDEDED</color>
+    <color name="dark_gray">#888888</color>
     <color name="purple">#6836BF</color>
     <color name="light_purple">#884BF1</color>
 </resources>
